create new category route
